midterm เสร็จสิ้น งดงามจริง ๆ

--- a/BasicPython&DataViz_midterm2022.ipynb
+++ b/BasicPython&DataViz_midterm2022.ipynb
@@ -4771,23 +4771,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "for a in listgeo:\n",
-        "  b = covid_region.groupby(a)[['No.']].count().sort_values('No.',ascending=False)['No.'].idxmax()\n",
-        "  c = covid_region.groupby(a)[['No.']].count().sort_values('No.',ascending=False)['No.'].idxmin()\n",
-        "  print(f'ในการแบ่งภูมิภาคตาม {a} จำนวนผู้ป่วยที่มากที่สุด คือ ภาค{b} และจำนวนผู้ป่วยที่น้อยที่สุด คือ ภาค{c}')\n",
-        "  print(f'                       ')\n",
-        "  print(f'-----------------------------------------------------------------------------------------------------------------')\n",
-        "  print(f'                       ')"
-      ],
-      "metadata": {
-        "id": "4iVVf8PAA-JI"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# ข้อ 3 แสดง Cluster การติด (risk) ที่ซ้ำกันมากที่สุดของแต่ละภูมิภาค (20 คะแนน)"
@@ -4804,7 +4787,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 598
         },
         "id": "i7GpMOtTuzpR",
         "outputId": "30a647ad-7132-4142-c8a2-804682a4863a"
@@ -5217,7 +5200,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 269
         },
         "id": "5dAxN-FjAmXL",
         "outputId": "8be666c6-f025-4fa0-ae92-59161b6034ba"
@@ -5479,7 +5462,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 206
         },
         "id": "Etkn6FvjCb-T",
         "outputId": "80231dfc-c422-45f1-b315-e2627660b6cf"
@@ -5635,7 +5618,7 @@
         "print(f'ภูมิภาค (การเมือง) ภาคกลาง มีการติดที่มากที่สุดคือ การสัมผัสใกล้ชิดกับผู้ป่วยยืนยันรายก่อนหน้านี้ จำนวน 215637 คน ')\n",
         "print(f'ภูมิภาค (การเมือง) ภาคตะวันออกเฉียงเหนือ มีการติดที่มากที่สุดคือ อื่นๆ จำนวน 17692 คน ')\n",
         "print(f'ภูมิภาค (การเมือง) ภาคเหนือ มีการติดที่มากที่สุดคือ การสัมผัสใกล้ชิดกับผู้ป่วยยืนยันรายก่อนหน้านี้ จำนวน 15940 คน ')\n",
-        "print(f'ภูมิภาค (การเมือง) ภาคใต้ การสัมผัสใกล้ชิดกับผู้ป่วยยืนยันรายก่อนหน้านี้ อื่นๆ จำนวน 40806 คน ')"
+        "print(f'ภูมิภาค (การเมือง) ภาคใต้ การสัมผัสใกล้ชิดกับผู้ป่วยยืนยันรายก่อนหน้านี้ จำนวน 40806 คน ')"
       ],
       "metadata": {
         "id": "pbGIn9IleVoj",
@@ -5735,7 +5718,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 269
         },
         "id": "KwSbP7_2GGCB",
         "outputId": "55a92fa0-aa29-4df9-b662-596a6c1b7aba"
@@ -5900,7 +5883,7 @@
       "source": [
         "print(f'ภูมิภาค (อุตุนิยมวิทยา) ภาคกลาง มีการติดที่มากที่สุดคือ การสัมผัสใกล้ชิดกับผู้ป่วยยืนยันรายก่อนหน้านี้ จำนวน 174399 คน ')\n",
         "print(f'ภูมิภาค (อุตุนิยมวิทยา) ภาคตะวันออก มีการติดที่มากที่สุดคือ การสัมผัสใกล้ชิดกับผู้ป่วยยืนยันรายก่อนหน้านี้ จำนวน 36567 คน ')\n",
-        "print(f'ภูมิภาค (อุตุนิยมวิทยา) ภาคตะวันออกเฉียงเหนือ มีการติดที่มากที่สุดคือ การสัมผัสใกล้ชิดกับผู้ป่วยยืนยันรายก่อนหน้านี้ จำนวน 17692 คน ')\n",
+        "print(f'ภูมิภาค (อุตุนิยมวิทยา) ภาคตะวันออกเฉียงเหนือ มีการติดที่มากที่สุดคือ อื่น ๆ จำนวน 17692 คน ')\n",
         "print(f'ภูมิภาค (อุตุนิยมวิทยา) ภาคเหนือ มีการติดที่มากที่สุดคือ การสัมผัสใกล้ชิดกับผู้ป่วยยืนยันรายก่อนหน้านี้ จำนวน 15454 คน ')\n",
         "print(f'ภูมิภาค (อุตุนิยมวิทยา) ใต้ฝั่งตะวันตก/ใต้ฝั่งอันดามัน มีการติดที่มากที่สุดคือ การสัมผัสใกล้ชิดกับผู้ป่วยยืนยันรายก่อนหน้านี้ จำนวน 4233 คน ')\n",
         "print(f'ภูมิภาค (อุตุนิยมวิทยา) ใต้ฝั่งตะวันออก/ใต้ฝั่งอ่าวไทย มีการติดที่มากที่สุดคือ การสัมผัสใกล้ชิดกับผู้ป่วยยืนยันรายก่อนหน้านี้ จำนวน 41730 คน ')"
@@ -5998,7 +5981,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 238
         },
         "id": "P_fTxPM-HwoR",
         "outputId": "a982c378-5fcf-4b92-aff1-9d1024ddf40f"
